AuthControlle: fix n+1 problem (add entitygraphs, add jakson annotation)